# nasm_plus_qt_creator

./: CMakeLists.txt  lab.asm  main.c
