cmake_minimum_required(VERSION 3.24)
SET(CMAKE_ASM_NASM_COMPILER nasm)

enable_language(ASM_NASM)

project(untitled LANGUAGES C ASM_NASM)

SET(CMAKE_BUILD_TYPE Debug)
set(CMAKE_ASM_NASM_FLAGS_DEBUG "-g -F dwarf")
set(CMAKE_ASM_NASM_OBJECT_FORMAT elf64)
set(CMAKE_ASM_NASM_LINK_EXECUTABLE "ld <CMAKE_ASM_NASM_LINK_FLAGS> <LINK_FLAGS> <OBJECTS>  -o <TARGET> <LINK_LIBRARIES>")
set(CMAKE_ASM_NASM_COMPILE_OBJECT "<CMAKE_ASM_NASM_COMPILER> <INCLUDES> \
<FLAGS> -f ${CMAKE_ASM_NASM_OBJECT_FORMAT} -o <OBJECT> <SOURCE>")

add_executable(lab2 main.c lab.asm)
set_target_properties(lab2 PROPERTIES NASM_OBJ_FORMAT elf64)
